--- a/PlaceFinder/res/values/strings.xml
+++ b/PlaceFinder/res/values/strings.xml
@@ -6,5 +6,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="mapKey">80:B9:B0:A1:DF:BF:58:54:EB:0A:9F:82:F6:D2:54:40</string>
+    <string name="N">N</string>
+    <string name="W">W</string>
+    <string name="degre">°</string>
+    <string name="point">.</string>
 
 </resources>
