--- a/PlaceFinder/res/values/strings.xml
+++ b/PlaceFinder/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="E">E</string>
     <string name="degre">°</string>
     <string name="point">.</string>
-    <string name="help">Saisir des coordonnées au format DM.d</string>
+    <string name="help">Select coordinates : </string>
+    <string name="search">Search</string>
 
 </resources>
